🐛 FIX: Small fix in overflow

--- a/source/_base.scss
+++ b/source/_base.scss
@@ -1,5 +1,5 @@
 html, body {
-    overflow: hidden;
+    overflow-x: hidden;
     touch-action: pan-y;
     position: relative;
 }
